--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "typings bundle -o test/bundle.d.ts",
     "test": "tsc -p test",
-    "lint": "tslint -c tslint.json index.d.ts builder.d.ts"
+    "lint": "tslint -c tslint.json *.d.ts lib/*.d.ts http/*.d.ts"
   },
   "license": "MIT",
   "keywords": [
